--- a/Nobi.DapperOrm/Nobi.DapperOrm.csproj
+++ b/Nobi.DapperOrm/Nobi.DapperOrm.csproj
@@ -7,13 +7,19 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="7.0.9" />
+    <PackageReference Include="Dapper" Version="2.0.143" />
+    <PackageReference Include="MicroOrm.Dapper.Repositories" Version="1.25.1" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.4" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Nobi.Base\Nobi.Base.csproj" />
+    <ProjectReference Include="..\Nobi.ExcelLib\Nobi.ExcelLib.csproj" />
   </ItemGroup>
 
 </Project>
