--- a/GbLib.RabbitMQ/GbLib.RabbitMQ.csproj
+++ b/GbLib.RabbitMQ/GbLib.RabbitMQ.csproj
@@ -4,27 +4,25 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <Title>GbLib.DapperOrm</Title>
-    <Authors>Sơn Khiếu &amp; Contributors</Authors>
-    <Description>DapperOrm</Description>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-    <Version>1.0.1</Version>
+    <Title>GbLib.RabbitMQ</Title>
+    <Authors>Sơn Khiếu &amp; Contributors</Authors>
+    <Description>This is a library for RabbitMQ</Description>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Dapper" Version="2.0.143" />
-    <PackageReference Include="MicroOrm.Dapper.Repositories" Version="1.25.1" />
-    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.1" />
+    <PackageReference Include="Autofac" Version="7.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.4" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1" />
+    <PackageReference Include="Polly" Version="7.2.4" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.5.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\GbLib.Base\GbLib.Base.csproj" />
-    <ProjectReference Include="..\GbLib.ExcelLib\GbLib.ExcelLib.csproj" />
   </ItemGroup>
 
 </Project>
