--- a/GbLib.Jwt/GbLib.Jwt.csproj
+++ b/GbLib.Jwt/GbLib.Jwt.csproj
@@ -8,6 +8,7 @@
     <Title>GbLib.Jwt</Title>
     <Authors>Sơn Khiếu &amp; Contributors</Authors>
     <Description>The library for Authentication</Description>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
