--- a/GbLib.MongoDb/GbLib.MongoDb.csproj
+++ b/GbLib.MongoDb/GbLib.MongoDb.csproj
@@ -8,11 +8,13 @@
     <Title>GbLib.MongoGb</Title>
     <Authors>Sơn Khiếu &amp; Contributors</Authors>
     <Description>MongoDb lib for Gblib Packages</Description>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.20.0" />
+    <PackageReference Include="Scrutor" Version="4.2.2" />
   </ItemGroup>
 
   <ItemGroup>
