Fix bổ sung một số

--- a/GbLib.ExcelLib/GbLib.ExcelLib.csproj
+++ b/GbLib.ExcelLib/GbLib.ExcelLib.csproj
@@ -8,6 +8,7 @@
     <Title>GbLib.ExcelLib</Title>
     <Authors>Sơn Khiếu &amp; Contributors</Authors>
     <Description>Library to Export Excel</Description>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
