--- a/GbLib.Extensions/GbLib.Extensions.csproj
+++ b/GbLib.Extensions/GbLib.Extensions.csproj
@@ -13,7 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="EPPlus" Version="7.0.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="6.0.0-preview.4.21253.5" />
     <PackageReference Include="Microsoft.Extensions.DependencyModel" Version="7.0.0" />
     <PackageReference Include="morelinq" Version="4.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
