--- a/GbLib.Kafka/GbLib.Kafka.csproj
+++ b/GbLib.Kafka/GbLib.Kafka.csproj
@@ -8,6 +8,7 @@
     <Title>GbLib.Kafka</Title>
     <Authors>Sơn Khiếu &amp; Contributors</Authors>
     <Description>The library of Kafka</Description>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
