--- a/GbLib.Logging/GbLib.Logging.csproj
+++ b/GbLib.Logging/GbLib.Logging.csproj
@@ -8,6 +8,7 @@
 		<Title>GbLib.Logging</Title>
 		<Authors>Sơn Khiếu &amp; Contributors</Authors>
 		<Description>Logging Base for GbLib</Description>
+		<Version>1.0.1</Version>
 	</PropertyGroup>
 
 	<ItemGroup>
