--- a/GbLib.Services/GbLib.Services.csproj
+++ b/GbLib.Services/GbLib.Services.csproj
@@ -5,23 +5,15 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <Title>GbLib.Services</Title>
-    <Version>1.0.0</Version>
+    <Version>1.0.4</Version>
     <Authors>Sơn Khiếu &amp; Contributors</Authors>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Dapper" Version="2.1.21" />
-    <PackageReference Include="MicroOrm.Dapper.Repositories" Version="1.25.1" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.14" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.14" />
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
-  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\GbLib.Base\GbLib.Base.csproj" />
     <ProjectReference Include="..\GbLib.Entities\GbLib.Entities.csproj" />
     <ProjectReference Include="..\GbLib.ExcelLib\GbLib.ExcelLib.csproj" />
+    <ProjectReference Include="..\GbLib.Repositories\GbLib.Repositories.csproj" />
   </ItemGroup>
 
 </Project>
