Fix lại JWT, bổ sung refresh token

--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="GbLib.Base" Version="1.0.20" />
+    <PackageReference Include="GbLib.Jwt" Version="1.0.8" />
     <PackageReference Include="GbLib.Repositories" Version="1.0.2" />
     <PackageReference Include="GbLib.Services" Version="1.0.6" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.14" />
