Fix lại hàm GetPrincipleFromExpiredToken

--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -9,10 +9,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="GbLib.Base" Version="1.0.20" />
-    <PackageReference Include="GbLib.Jwt" Version="1.0.8" />
-    <PackageReference Include="GbLib.Repositories" Version="1.0.2" />
-    <PackageReference Include="GbLib.Services" Version="1.0.6" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.14" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.14">
       <PrivateAssets>all</PrivateAssets>
@@ -21,6 +17,14 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.4" />
     <PackageReference Include="Scrutor" Version="4.2.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\GbLib.Base\GbLib.Base.csproj" />
+    <ProjectReference Include="..\GbLib.Entities\GbLib.Entities.csproj" />
+    <ProjectReference Include="..\GbLib.Jwt\GbLib.Jwt.csproj" />
+    <ProjectReference Include="..\GbLib.Repositories\GbLib.Repositories.csproj" />
+    <ProjectReference Include="..\GbLib.Services\GbLib.Services.csproj" />
   </ItemGroup>
 
 </Project>
