--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -8,6 +8,8 @@
 		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
 	</PropertyGroup>
 	<ItemGroup>
+		<PackageReference Include="Autofac" Version="7.1.0" />
+		<PackageReference Include="Autofac.Extensions.DependencyInjection" Version="8.0.0" />
 		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.14" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.14">
 			<PrivateAssets>all</PrivateAssets>
@@ -26,6 +28,7 @@
 		<ProjectReference Include="..\GbLib.Base\GbLib.Base.csproj" />
 		<ProjectReference Include="..\GbLib.Entities\GbLib.Entities.csproj" />
 		<ProjectReference Include="..\GbLib.Jwt\GbLib.Jwt.csproj" />
+		<ProjectReference Include="..\GbLib.RabbitMQ\GbLib.RabbitMQ.csproj" />
 		<ProjectReference Include="..\GbLib.Repositories\GbLib.Repositories.csproj" />
 		<ProjectReference Include="..\GbLib.Services\GbLib.Services.csproj" />
 	</ItemGroup>
