--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -1,11 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
 	<PropertyGroup>
-		<TargetFramework>net7.0</TargetFramework>
+		<TargetFramework>net8.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<UserSecretsId>bca09799-e789-4662-8554-d0f227ac165f</UserSecretsId>
 		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+		<DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Autofac" Version="7.1.0" />
@@ -28,9 +29,25 @@
 		<ProjectReference Include="..\GbLib.Base\GbLib.Base.csproj" />
 		<ProjectReference Include="..\GbLib.Entities\GbLib.Entities.csproj" />
 		<ProjectReference Include="..\GbLib.Jwt\GbLib.Jwt.csproj" />
-		<ProjectReference Include="..\GbLib.RabbitMQ\GbLib.RabbitMQ.csproj" />
 		<ProjectReference Include="..\GbLib.Repositories\GbLib.Repositories.csproj" />
+		<ProjectReference Include="..\GbLib.RMQ\GbLib.RMQ.csproj" />
 		<ProjectReference Include="..\GbLib.Services\GbLib.Services.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Remove="..\.dockerignore" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Remove="..\.dockerignore" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Remove="..\.dockerignore" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Remove="..\.dockerignore" />
 	</ItemGroup>
 
 </Project>
