--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -9,29 +9,16 @@
 		<DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
 	</PropertyGroup>
 	<ItemGroup>
-		<PackageReference Include="Autofac" Version="7.1.0" />
 		<PackageReference Include="Autofac.Extensions.DependencyInjection" Version="8.0.0" />
 		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0">
-			<PrivateAssets>all</PrivateAssets>
-			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		</PackageReference>
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.0">
-		  <PrivateAssets>all</PrivateAssets>
-		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		</PackageReference>
 		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.4" />
 		<PackageReference Include="Scrutor" Version="4.2.2" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\GbLib.Base\GbLib.Base.csproj" />
-		<ProjectReference Include="..\GbLib.Entities\GbLib.Entities.csproj" />
 		<ProjectReference Include="..\GbLib.Jwt\GbLib.Jwt.csproj" />
-		<ProjectReference Include="..\GbLib.Repositories\GbLib.Repositories.csproj" />
-		<ProjectReference Include="..\GbLib.RMQ\GbLib.RMQ.csproj" />
-		<ProjectReference Include="..\GbLib.Services\GbLib.Services.csproj" />
+		<ProjectReference Include="..\Test.Application\Test.Application.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
