--- a/Test.Application/Test.Application.csproj
+++ b/Test.Application/Test.Application.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\GbLib.Kafka\GbLib.Kafka.csproj" />
+    <ProjectReference Include="..\GbLib.MongoDb\GbLib.MongoDb.csproj" />
   </ItemGroup>
 
 </Project>
