--- a/GbLib.MongoDb/GbLib.MongoDb.csproj
+++ b/GbLib.MongoDb/GbLib.MongoDb.csproj
@@ -8,7 +8,7 @@
     <Title>GbLib.MongoGb</Title>
     <Authors>Sơn Khiếu &amp; Contributors</Authors>
     <Description>MongoDb lib for Gblib Packages</Description>
-    <Version>1.1.0</Version>
+    <Version>1.2.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\GbLib.Base\GbLib.Base.csproj" />
+    <ProjectReference Include="..\GbLib.ExcelLib\GbLib.ExcelLib.csproj" />
   </ItemGroup>
 
 </Project>
